--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,11 +1,15 @@
 #envelope {
 margin: 150px;
 position: relative;
-width: 280px; height: 180px; margin-left: auto; margin-right: auto;
+width: 280px; 
+height: 180px; 
+margin-left: auto; 
+margin-right: auto;
 top: 150px;
 background-color: #f9c5c8;
 box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-}# This is a basic workflow to help you get started with Actions
+}
+
 
 name: hi
 
